<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="add_assessment">Add Assessment</string>
    <string name="add_course">Add Course</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="add_term">Add Term</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="edit_term">Edit Term</string>
    <string name="app_name">Student Planner</string>
    <string name="assessment">Assessment</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessments">Assessments</string>
    <string name="cancel">Cancel</string>
    <string name="course">Course</string>
    <string name="course_name">Course Name</string>
    <string name="course_status">Course Status</string>
    <string name="courses">Courses</string>
    <string name="dateTimeFormatSkeleton">yyyy-MM-dd hh:mm a</string>
    <string name="email_address">Email Address</string>
    <string name="end">End</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="go">GO</string>
    <string name="mentor">Mentor</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="notes">Notes</string>
    <string name="objective">Objective</string>
    <string name="performance">Performance</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="status">Status</string>
    <string name="stop">STOP</string>
    <string name="term">Term</string>
    <string name="term_name">Term Name</string>
    <string name="term_number">Term Number</string>
    <string name="terms">Terms</string>
    <string name="title_activity_term">Term List</string>
    <string name="title_assessments">Assessments</string>
    <string name="title_course_detail">Course Detail</string>
    <string name="title_course_list">Courses</string>
    <string name="title_courses">Courses</string>
    <string name="title_home">Home</string>
    <string name="title_terms">Terms</string>
    <string name="type">Type</string>
    <string name="confirm_delete">Are you sure you want to delete this <xliff:g id="item" example="course">%1$s</xliff:g>?</string>
    <string name="confirm_delete_item">Are you sure you want to delete <xliff:g id="item type" example="assessment">%1$s</xliff:g>\"<xliff:g id="item name" example="CS202 Final Exam">%2$s</xliff:g>\"?</string>
    <string name="event_format"><xliff:g id="terminus" example="Start">%1$s</xliff:g> of <xliff:g id="prefix" example="Assessment">%2$s</xliff:g> <xliff:g id="name" example="CS202 Final Exam">%3$s</xliff:g></string>
    <string name="edit">Edit</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="mentor_removed">Mentor <xliff:g id="mentor" example="Sir Isaac Newton">%s</xliff:g> removed</string>
    <plurals name="assessment">
        <item quantity="one">@string/assessment</item>
        <item quantity="other">@string/assessments</item>
    </plurals>
    <plurals name="term">
        <item quantity="one">@string/term</item>
        <item quantity="other">@string/terms</item>
    </plurals>
    <plurals name="course">
        <item quantity="one">@string/course</item>
        <item quantity="other">@string/courses</item>
    </plurals>
    <!-- The following two arrays MUST match the mapping of integer values to Assessment.Type enums.
     See data/Assessment.java -->
    <string-array name="course_status_name">
        <item>Planned</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>
    <integer-array name="course_status_id">
        <item>4</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </integer-array>
    <string-array name="assessment_type_name">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>
    <integer-array name="assessment_type_id">
        <item>2</item>
        <item>1</item>
    </integer-array>
    <string name="edit_note">Edit Note</string>
    <string name="share">Share</string>
    <string name="text">Photo</string>
    <string name="view_photo">View Photo</string>
    <string name="time_paradox">Time paradox! Start must be before end.</string>
    <string name="negative_term_error">Term number cannot be negative</string>
    <string name="invalid_term_error">Invalid term number</string>
    <string name="add_note">Add Note</string>
    <string name="note_prompt">Type a note here</string>
    <string name="delete">Delete</string>
    <string name="term_detail">Term Detail</string>
    <string name="assessment_detail">Assessment Detail</string>
    <string name="choose_course_mentor">Choose Course Mentor</string>
    <string name="deleted">Deleted <xliff:g id="item name" example="Some Item">%s</xliff:g>.</string>
    <string name="deleted_item">Deleted <xliff:g id="item type" example="Course">%1$s</xliff:g> \"<xliff:g id="item name" example="EWRT 100B">%2$s</xliff:g>\"</string>
    <string name="help">Help</string>
    <string name="course_detail_help">Tap and hold on a mentor to remove the mentor from this course.\n\nTo permanently delete a mentor, tap on the mentor and choose Delete from the menu in the upper-right corner.</string>
    <string name="photograph_attached_to_note">Photograph attached to note</string>
    <string name="hyphenated_duration"><xliff:g id="start" example="4:00 PM">%1$s</xliff:g><xliff:g id="em dash">\u2014</xliff:g><xliff:g id="end" example="6:00 PM">%2$s</xliff:g></string>
</resources>
