<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <include layout="@layout/toolbar"/>

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_large"
        android:ems="10"
        android:hint="@string/mentor_name"
        android:inputType="text|textCapWords|textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_large"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="text|phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_large"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="text|textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_number"
        />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:onClick="createCourseMentor"
        android:text="@string/add_mentor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_button"
        app:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_section"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/create_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>
</LinearLayout>