<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<include layout="@layout/toolbar"/>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">
    <include layout="@layout/term_list_item"
        android:layout_width="0dp"
        android:layout_height="@dimen/item_height"

        android:layout_marginBottom="@dimen/margin_large"
        android:id="@+id/term_list_item"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_large"/>
    <!--app:layout_constraintBottom_toTopOf="@+id/label_name"-->
 <!--   <TextView
        android:id="@+id/label_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:text="Course Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@+id/term_list_item"/>-->
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_large"
        android:ems="10"
        android:hint="@string/course_name"
        android:inputType="text|textCapSentences|textAutoCorrect"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term_list_item"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>
    <!--app:layout_constraintTop_toBottomOf="@+id/label_name"-->
<!--    <TextView
        android:id="@+id/label_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="Notes"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginEnd="@dimen/margin_large"/>-->
    <EditText
        android:id="@+id/edit_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_large"
        android:ems="10"
        android:hint="@string/notes"
        android:inputType="text|textCapSentences|textAutoCorrect|textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"

        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>
    <!--app:layout_constraintBottom_toTopOf="@+id/separator1"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/label_notes"-->
    <!--android:theme="@style/AppTheme.EditControl"-->
    <!--app:layout_constraintBottom_toTopOf="@+id/edit_start_date"-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/edit_start_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_access_time_gray_24dp"
        tools:layout_editor_absoluteY="261dp"
        app:layout_constraintRight_toLeftOf="@+id/edit_start_date"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/edit_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_section"
        android:onClick="showStartDatePickerDialog"
        android:text="@string/start_date"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_notes"
        /> <!--android:theme="@style/AppTheme.EditControl"-->

    <TextView
        android:id="@+id/edit_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:onClick="showStartTimePickerDialog"
        android:text="@string/start_time"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_start_date"
        />
    <!--android:theme="@style/AppTheme.EditControl"-->
    <!--android:inputType="datetime|time"-->
    <TextView
        android:id="@+id/edit_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="24dp"
        android:onClick="showEndDatePickerDialog"
        android:text="@string/end_date"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_start_date"
        />
    <!--android:theme="@style/AppTheme.EditControl"-->

    <TextView
        android:id="@+id/edit_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:onClick="showEndTimePickerDialog"

        android:text="@string/end_time"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_end_date"
        />

    <TextView
        android:id="@+id/label_course_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_section"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_end_date"/>
<!--android:theme="@style/AppTheme.EditControl"-->
    <Spinner
        android:id="@+id/spinner_course_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline"
        android:entries="@array/course_status_name"
        android:prompt="@string/course_status"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_course_status"/>
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--android:theme="@style/AppTheme.EditControl"-->
    <Button
        android:id="@+id/create_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="createCourse"
        android:text="@string/add_course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/cancel_button"
        android:layout_marginTop="@dimen/margin_section"
        app:layout_constraintTop_toBottomOf="@+id/spinner_course_status"
        app:layout_constraintVertical_bias="0.941"
        app:layout_constraintHorizontal_bias="1.0"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginStart="@dimen/keyline"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/create_button"
        android:layout_marginTop="@dimen/margin_section"
        app:layout_constraintTop_toBottomOf="@+id/spinner_course_status"
        />



</android.support.constraint.ConstraintLayout></ScrollView></LinearLayout>