<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <include layout="@layout/toolbar"/>

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_large"
        android:ems="10"
        android:hint="@string/term_name"
        android:inputType="text|textCapSentences|textAutoCorrect"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_large"
        android:ems="10"
        android:hint="@string/term_number"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        tools:layout_editor_absoluteX="0dp"/>

    <ImageView
        android:id="@+id/clock_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/edit_start_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_access_time_gray_24dp"
        tools:layout_editor_absoluteY="261dp"
        app:layout_constraintRight_toLeftOf="@+id/edit_start_date"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/edit_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_section"
        android:ems="6"
        android:onClick="showStartDatePickerDialog"
        android:text="@string/start_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number"
        /> <!--android:theme="@style/AppTheme.EditControl"-->

<!--    <TextView
        android:id="@+id/edit_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:ems="6"
        android:onClick="showStartTimePickerDialog"
        android:text="@string/start_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_start_date"/>-->
    <!--android:theme="@style/AppTheme.EditControl"-->
    <!--android:inputType="datetime|time"-->

    <TextView
        android:id="@+id/edit_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="6"
        android:onClick="showEndDatePickerDialog"
        android:text="@string/end_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        app:layout_constraintTop_toTopOf="@+id/edit_start_date"
        />
<!--
    android:layout_marginLeft="@dimen/keyline"
    android:layout_marginStart="@dimen/keyline"
    android:layout_marginTop="16dp"
-->

    <!--android:theme="@style/AppTheme.EditControl"-->

<!--    <TextView
        android:id="@+id/edit_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:ems="6"
        android:onClick="showEndTimePickerDialog"

        android:text="@string/end_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_start_time"
        />-->

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="createTerm"
        android:text="@string/add_term"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_button"
        app:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/keyline"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/keyline"
        android:layout_marginTop="@dimen/margin_section"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/create_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_end_date"
        app:layout_constraintVertical_bias="1.0"/>



</android.support.constraint.ConstraintLayout>
</ScrollView>
</LinearLayout>